# cookiecutter-python

./: .flake8  .gitignore  .pre-commit-config.yaml  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  pyproject.toml  {% if cookiecutter.license == 'BSD-3-Clause' -%} LICENSE {%- endif %}
{{ cookiecutter.repo_name }}/ci/requirements/: docs.txt  docs.yaml  environment.yaml
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/licenses/: MIT
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/: __init__.py
